--- a/posts/2018-05-06.md
+++ b/posts/2018-05-06.md
@@ -2,20 +2,26 @@
 
 In this post we'll build a query processor from start to finish, using [differential dataflow](https://github.com/frankmcsherry/differential-dataflow).
 
-This wll be partly walking through some of the moving parts in differential dataflow, so that you can see them and see how they work, and also partly me having to admit which things are gross and hard to do, so that I can be shamed in to fixing them.
+What I mean by that is "a differential dataflow program that can run queries", rather than writing and compiling new differential dataflow programs for each new query you might have thought of. Rather than minutes to compile things (blame Rust!) it should take a millisecond or so to create and install a new computation, followed by probably somewhat more work than in a compiled program.
+
+We are building something between compiled code and an interpreter: a program that builds dataflows in response to program input, but builds the dataflows out of pre-defined operators. It's a bit how a database query execution layer works!
+
+This post will be partly walking through some of the moving parts in differential dataflow, so that you can see them and see how they work, and also partly me having to admit which things are gross and hard to do, so that I can be shamed in to fixing them.
 
 Here is the outline:
 
-1. A little language (borrowed from [Graspan](https://www.ics.uci.edu/~guoqingx/papers/wang-asplos17.pdf)).
+1. Define a little language (borrowed from [Graspan](https://www.ics.uci.edu/~guoqingx/papers/wang-asplos17.pdf)).
 2. Defining some Rust types to help us out.
 3. Building iterative differential dataflows.
 4. Optimizing differential dataflows.
 
 ### A little language
 
-Let's start by describing a small query language, which comes courtesy of the [Graspan paper](https://www.ics.uci.edu/~guoqingx/papers/wang-asplos17.pdf). Graspan is a system built to analyze large code bases, by transforming the code bases into directed graphs that describe the flow of data through variable bindings. The Graspan authors had to build a new system to be able to handle their queries (apparently [SociaLite](https://socialite-lang.github.io) bombed hard, rarely terminating, much like my browser when I click on [their "Quick Start" link](https://socialite-lang.github.io/pages/quick_start)).
+Let's start by describing a small query language, which comes courtesy of the [Graspan paper](https://www.ics.uci.edu/~guoqingx/papers/wang-asplos17.pdf). Graspan is a system built to analyze large code bases, by transforming the code bases into directed graphs that describe the flow of data through variable bindings. The Graspan authors built a new system to be able to handle their queries, because apparently [SociaLite](https://socialite-lang.github.io) bombs hard, rarely terminating (much like my browser when I click on [SociaLite's "Quick Start" link](https://socialite-lang.github.io/pages/quick_start)).
 
-The Graspan setting starts from some base "edges", extracted from a program's source. These edges have a few different semantic flavors, and you could imagine adding new ones if you have further interests. Examples include (quoted from their Section 2.2):
+The Graspan setting starts from some base "edges", extracted from a program's source. These edges have a few different semantic flavors, and you could imagine adding new ones if you have further interests. For our purposes they are just pairs of integers labeled with a "flavor" (a string).
+
+Examples include (quoted from their Section 2.2):
 
 * Dereference edge (D): for each dereference `*a`, there is a D-edge from `a` to `*a`; there is also an edge from an address-of expression `&a` to `a` because `a` is a dereference of `&a`.
 
@@ -29,6 +35,8 @@ Roughly, from sets of edges `A`, `B`, .. `Z`, one can define paths by the sequen
 
     A B  :=  { (x,z) | exists y s.t. (x,y) in A, (y,z) in B }
 
+Another way to think of `A B` is by putting lower case variables between the upper case variables: `x A y B z`.
+
 The Graspan folks make this a bit more interesting by adding some other connectives. They use `?` to mean "optionally", they use `~` to mean "reverse edge set" and they use `( .. )*` for the [Kleene star](https://en.wikipedia.org/wiki/Kleene_star), indicating zero or more repetitions of whatever is inside the parentheses.
 
 Here are some examples, again from Graspan's Section 2.2:
@@ -41,21 +49,23 @@ In their example, `VF` is "value flow", `MA` is "memory aliasing", and `VA` is "
 
 #### Making the language littler
 
-To approach this problem, we'll make the language a little simpler. The Graspan authors do something similar, but we are going to deviate a little bit to help with our approach. I'm just going to say where we arrive at, and leave it as a bit of an exercise to confirm that this language is similarly expressive.
+To approach this problem, we'll make the language a little simpler. I'm just going to say where we arrive at, and leave it as a bit of an exercise to confirm that this language is similarly expressive.
 
 Our query language will be a list of *productions*, where each production has the form:
 
     R0  ::==  R1 R2 .. Rk
 
-There is just one relation named on the left side, and the relations on the right side can be either relations of transposed relations (`~`). The relations on the right side can occur multiple times, and can include the relation named on the left side. The same relation can be named in the left side of several distinct productions, and each production contributes to the elements of the left side relation.
+There is just one relation named on the left side, and the relations on the right side can be either relations or transposed relations (prefixed with `~`). The relations on the right side can occur multiple times, and can include the relation named on the left side (which allows us to define recursion). The same relation can be named in the left side of several distinct productions, and each production contributes to the elements of the left side relation.
 
-This is a bit like the language the Graspan folks get to in their Section 3, but we don't allow empty productions (epsilon, in their framing). Instead, relations `R` that contain the empty production are replaced by ones `R+` that do not, and all productions that use such a relation are replaced by two productions: i. one using the positive relation and ii. one not using it. Ultimately, the property "contains the empty production" is a static property of a relation in a query, and one whose complexity we can optimize out.
+This is a bit like the language the Graspan folks get to in their Section 3, but we don't allow empty productions (epsilon, in their framing). Instead, relations `R` that contain the empty production are replaced by ones `R+` that do not, and all productions that use such a relation are replaced by two productions: i. one using the positive relation and ii. one not using it. Ultimately, the property "contains the empty production" is a static property of a relation in a query, and one whose complexity we can compile out.
 
 To reproduce the query up above, we would write
 
+    VF+  ::==  A
+    VF+  ::==  A MA+
     VF+  ::==  A VF+
     VF+  ::==  A MA+ VF+
-    MA+  ::==  ~D D+
+    MA+  ::==  ~D D
     MA+  ::==  ~D VA+ D
     VA+  ::==  ~VF+
     VA+  ::==  ~VF+ MA+
@@ -109,7 +119,7 @@ Finally, a query will just be a sequence of productions.
 ```rust
 struct Query {
     /// A sequence of productions.
-    pub productions: Vec<Prouduction>,
+    pub productions: Vec<Production>,
 }
 ```
 
@@ -169,7 +179,7 @@ Before we go too far, I'm going to introduce one last helper type.
 
 We will be using differential dataflow's `Variable` type to help us build up mutually recursive rules, but it is a bit more flexible than we need. The `Variable` type allows us to define a collection whose contents change arbitrarily in each iteration, and we aren't going to need to change our collection arbitrarily, but rather just add tuples to the collection if they don't already exist.
 
-Let's build a slightly simpler interface to `Variable`, an `EdgeVariable`. This variable can be created `from` an initial collection, and it can have other collections added in using `add_production`. In the `drop` code for the `EdgeVariable` we take the concatenation of all input collections and apply `distinct()` before binding the result as the definition of the wrapped `Variable`.
+Let's build a slightly simpler interface to `Variable`, an `EdgeVariable`. This variable can be created `from` an initial collection, it can have other collections added in using `add_production`, and by calling `complete` we finalize its definition.
 
 ```rust
 /// A wrapper for an evolving set of edges.
@@ -177,7 +187,7 @@ Let's build a slightly simpler interface to `Variable`, an `EdgeVariable`. This 
 /// This wrapper supports the addition of new productions, and provides access to indexed representations of the forward and reverse
 /// edge directions.
 pub struct EdgeVariable<'a, G: Scope> where G::Timestamp : Lattice {
-    variable: Option<Variable<'a, G, Edge, isize>>,             // An option, so that we can `take` it.
+    variable: Variable<'a, G, Edge, isize>,
     pub current: Collection<Child<'a, G, u64>, Edge, isize>,
 }
 
@@ -185,7 +195,7 @@ impl<'a, G: Scope> EdgeVariable<'a, G> where G::Timestamp : Lattice {
     /// Create a new edge variable from an initial set of values.
     pub fn from(source: &Collection<Child<'a, G, u64>, Edge>) -> Self {
         EdgeVariable {
-            variable: Some(Variable::from(source.filter(|_| false))),
+            variable: Variable::from(source.filter(|_| false)),
             current: source.clone(),
         }
     }
@@ -193,19 +203,17 @@ impl<'a, G: Scope> EdgeVariable<'a, G> where G::Timestamp : Lattice {
     pub fn add_production(&mut self, production: &Collection<Child<'a, G, u64>, Edge, isize>) {
         self.current = self.current.concat(production);
     }
-}
-
-// When we drop the `EdgeVariable`, complete the recursive definition.
-impl<'a, G: Scope> Drop for EdgeVariable<'a, G> where G::Timestamp : Lattice {
-    fn drop(&mut self) {
-        if let Some(variable) = self.variable.take() {
-            variable.set(&self.current.distinct());
-        }
+    /// Finalizes the variable, connecting its recursive definition.
+    ///
+    /// Failure to call `complete` on a variable results in a non-recursively defined
+    /// collection, whose contents are just its initial `source` data.
+    pub fn complete(self) {
+        self.variable.set(&self.current.distinct());
     }
 }
 ```
 
-You may not entirely understand how `Variable` works internally, and this is fine because differential dataflow is mysterious in its ways, but the short version is that if we create an `EdgeVariable` and repeatedly call `add_production`, we will end up with a collection that in each round ensures that it contains all produced facts.
+You may not entirely understand how `Variable` works internally, and this is fine because differential dataflow is mysterious in its ways, but the short version is that if we create an `EdgeVariable` and repeatedly call `add_production`, we will end up with a collection that in each round contains the distinct set of all facts produced by the productions.
 
 The `Variable` struct is actually a pretty helpful way to set up arbitrary mutually recursive computations, even those involving collections that do not increase monotonically. Maybe we'll talk about it in a later post!
 
@@ -232,6 +240,11 @@ It all starts pretty harmlessly, by creating an nested subscope and preparing so
             // 1. TODO: populate `result_map` and `variable_map`.
             // 2. TODO: add productions based on `self`.
 
+            // complete each variable, return `result_map`.
+            for (_name, variable) in variable_map.drain(..) {
+                variable.complete();
+            }
+
             result_map
         }
 ```
@@ -246,7 +259,7 @@ The first step mostly boils down to draining `input_map`, which has one entry fo
             // Populate `result_map` and `variable_map`.
             for (name, (input, collection)) in input_map.drain() {
                 let edge_variable = EdgeVariable::from(&collection.enter(subscope));
-                let trace = edge_variable.variable.as_ref().unwrap().leave().arrange_by_self().trace;
+                let trace = edge_variable.variable.leave().arrange_by_self().trace;
                 result_map.insert(name.clone(), RelationHandles { input, trace });
                 variable_map.insert(name.clone(), edge_variable);
             }
@@ -269,15 +282,15 @@ The next step is to use `variable_map` and `self`, which is a `Query` recall, to
 
                     // We'll track the path transposed, so that it is indexed by *destination* rather than source.
                     let mut transposed = match production.relations[0] {
-                        Relation::Forward(ref name) => variable_map[name].current.map(|(x,y)|(y,x)),
-                        Relation::Reverse(ref name) => variable_map[name].current.clone(),
+                        Relation::Forward(ref name) => variable_map[name].variable.map(|(x,y)|(y,x)),
+                        Relation::Reverse(ref name) => variable_map[name].variable.clone(),
                     };
 
                     // Repeatedly join with sequence of relations, transpose.
                     for relation in production.relations[1..].iter() {
                         let to_join = match relation {
-                            &Relation::Forward(ref name) => variable_map[name].current.clone(),
-                            &Relation::Reverse(ref name) => variable_map[name].current.map(|(x,y)|(y,x)),
+                            &Relation::Forward(ref name) => variable_map[name].variable.clone(),
+                            &Relation::Reverse(ref name) => variable_map[name].variable.map(|(x,y)|(y,x)),
                         };
 
                         transposed = transposed.join_map(&to_join, |_k,&x,&y| (y,x));
@@ -295,7 +308,7 @@ That's it! Like, that's the whole `build_in` method. Next let's try using it!
 
 ### Running it!
 
-Here is a program that runs a standard Graspan query: the "dataflow" query which tracks null assignments. Ignore the lines about `render_in_opt` for the moment; they are the subject of the next section.
+Here is a program that reads a Graspan query, then loads some Graspan data, then runs everything.
 
 ```rust
 fn main() {
@@ -307,55 +320,43 @@ fn main() {
         let peers = worker.peers();
         let index = worker.index();
 
-        let mut relation_map = worker.dataflow::<(),_,_>(move |scope| {
-            // static reachability query.
-            let query = Query::build_from(vec!["nodes nodes edges".to_string(), "edges".to_string()]);
-            if std::env::args().any(|x| x == "opt") {
-                query.render_in_opt(scope)
-            }
-            else {
-                query.render_in(scope)
-            }
-        });
+        let query_filename = std::env::args().nth(1).expect("Argument 1 (query filename) missing.");
+        let query_text = std::fs::read_to_string(query_filename).expect("Failed to read query file");
+        let query = Query::build_from(query_text.lines());
 
-        if index == 0 { println!("{:?}:\tDataflow assembled", timer.elapsed()); }
+        let mut relation_map = worker.dataflow::<(),_,_>(|scope| query.render_in(scope));
 
-        // Extract input handles so we can start to work with them.
-        let mut nodes = relation_map.remove("nodes").unwrap();
-        let mut edges = relation_map.remove("edges").unwrap();
+        if index == 0 { println!("{:?}:\tDataflow assembled for {:?}", timer.elapsed(), query); }
 
-        let timer1 = timer.clone();
-        let timer2 = timer.clone();
-
-        // Build an additional dataflow to report the resulting sizes.
+        // Build a dataflow to report final sizes.
         worker.dataflow(|scope| {
-            nodes.trace
-                 .import(scope)
-                 .as_collection(|&_kv,&()| ())
-                 .consolidate()
-                 .inspect(move |x| println!("{:?}\tnodes: {:?}", timer1.elapsed(), x.2));
-            edges.trace
-                 .import(scope)
-                 .as_collection(|&_kv,&()| ())
-                 .consolidate()
-                 .inspect(move |x| println!("{:?}\tedges: {:?}", timer2.elapsed(), x.2));
+            for (name, data) in relation_map.iter_mut() {
+                let name = name.to_string();
+                data.trace
+                    .import(scope)
+                    .as_collection(|&_kv,&()| ())
+                    .consolidate()
+                    .inspect(move |x| println!("{:?}\tfinal size of relation '{}': {:?}", timer.elapsed(), name, x.2));
+            }
         });
 
-        // Read the input file, populate the input relations.
-        let filename = std::env::args().nth(1).expect("Where is the filename?");
-        let file = BufReader::new(File::open(filename).expect("Couldn't open the file."));
+        // snag a filename to use for the input graph.
+        let data_filename = std::env::args().nth(2).expect("Argument 2 (data filename) missing.");
+        let file = BufReader::new(File::open(data_filename).expect("Failed to read data file"));
+
         for readline in file.lines() {
             let line = readline.ok().expect("read error");
             if !line.starts_with('#') && line.len() > 0 {
                 let mut elts = line[..].split_whitespace();
-                let src = elts.next().expect("No src found").parse().ok().expect("malformed src");
+                let src = elts.next().expect("data line with no src (1st) element").parse().expect("malformed src");
                 if (src as usize) % peers == index {
-                    let dst = elts.next().expect("No dst found").parse().ok().expect("malformed dst");
-                    let val: &str = elts.next().expect("No val found");
-                    match val {
-                        "n" => { nodes.input.insert((src, dst)); },
-                        "e" => { edges.input.insert((src, dst)); },
-                        unk => { panic!("unknown type: {}", unk)},
+                    let dst = elts.next().expect("data line with no dst (2nd) element").parse().expect("malformed dst");
+                    let val: &str = elts.next().expect("data line with no val (3rd) element");
+                    if let Some(handle) = relation_map.get_mut(val) {
+                        handle.input.insert((src, dst));
+                    }
+                    else {
+                        panic!("couldn't find the named relation: {:?}", val);
                     }
                 }
             }
@@ -363,18 +364,19 @@ fn main() {
 
         if index == 0 { println!("{:?}:\tData loaded", timer.elapsed()); }
 
-    }).unwrap();
+    }).expect("Timely computation did not complete cleanly");
+}
 ```
 
-We can run this with one of the input datasets graciously provided by the Graspan team (thank you, Graspan team!), the `nodes` and `edges` relations for `httpd`.
+We can run this with one of the input datasets graciously provided by the Graspan team (thank you, Graspan team!), the nodes (`n`) and edges (`e`) relations for `httpd`.
 
-    Echidnatron% cargo run --release --example graspan -- ~/Desktop/graspan/httpd_df.dms
+    Echidnatron% cargo run --release --example graspan -- ./dataflow.query ~/Desktop/graspan/httpd_df.dms
         Finished release [optimized + debuginfo] target(s) in 82.16 secs
          Running `target/release/examples/graspan /Users/mcsherry/Desktop/graspan/httpd_df.dms`
     Rendering: Query {
         productions: [
-            Production { left_hand: "nodes", relations: [Forward("nodes"), Forward("edges")] },
-            Production { left_hand: "edges", relations: [] },
+            Production { left_hand: "n", relations: [Forward("n"), Forward("e")] },
+            Production { left_hand: "e", relations: [] },
         ]
     }
     Duration { secs: 0, nanos: 1886966 }:   Dataflow assembled
@@ -407,8 +409,8 @@ Recall that we form our productions like so
     // Repeatedly join with sequence of relations, transpose.
     for relation in production.relations[1..].iter() {
         let to_join = match relation {
-            &Relation::Forward(ref name) => variable_map[name].current.clone(),
-            &Relation::Reverse(ref name) => variable_map[name].current.map(|(x,y)|(y,x)),
+            &Relation::Forward(ref name) => variable_map[name].variable.clone(),
+            &Relation::Reverse(ref name) => variable_map[name].variable.map(|(x,y)|(y,x)),
         };
 
         transposed = transposed.join_map(&to_join, |_k,&x,&y| (y,x));
@@ -417,14 +419,35 @@ Recall that we form our productions like so
 
 which is to say we repeatedly join whatever collection we have associated with a name. This results in re-indexing these `to_join` relations each time they are used, whereas we really only want to index them once per *way* they are used: either indexed by their first field or by their second field.
 
-We can do this with an optimized form of the `EdgeVariable` struct, which will maintain indexed forms of the forward and reverse relations:
+We can do this with an optimized form of the `EdgeVariable` struct which maintains indexed forms of the forward and reverse relations:
 
 ```rust
 pub struct EdgeVariableOpt<'a, G: Scope> where G::Timestamp : Lattice {
-    variable: Option<Variable<'a, G, Edge, isize>>,         // An option, so that we can drop it.
+    variable: Variable<'a, G, Edge, isize>,
     current: Collection<Child<'a, G, u64>, Edge, isize>,
-    pub forward: Arrange<Child<'a, G, u64>, Node, Node, isize>,
-    pub reverse: Arrange<Child<'a, G, u64>, Node, Node, isize>,
+    forward: Option<Arrange<Child<'a, G, u64>, Node, Node, isize>>,
+    reverse: Option<Arrange<Child<'a, G, u64>, Node, Node, isize>>,
+}
+```
+
+I've made the `forward` and `reverse` members be `Option<_>` types so that they can be `None` initially, and created only when we actually require them (to avoid building and maintaining indices we do not need):
+
+```rust
+impl<'a, G: Scope> EdgeVariable<'a, G> where G::Timestamp : Lattice {
+    /// The collection arranged in the forward direction.
+    pub fn forward(&mut self) -> &Arrange<Child<'a, G, u64>, Node, Node, isize> {
+        if self.forward.is_none() {
+            self.forward = Some(self.variable.arrange_by_key());
+        }
+        self.forward.as_ref().unwrap()
+    }
+    /// The collection arranged in the reverse direction.
+    pub fn reverse(&mut self) -> &Arrange<Child<'a, G, u64>, Node, Node, isize> {
+        if self.reverse.is_none() {
+            self.reverse = Some(self.variable.map(|(x,y)| (y,x)).arrange_by_key());
+        }
+        self.reverse.as_ref().unwrap()
+    }
 }
 ```
 
@@ -433,15 +456,15 @@ Now when we want to use a relation, we can instead write
 ```rust
     for relation in rule[1..].iter() {
         let to_join = match relation {
-            &Relation::Forward(ref name) => &variable_map[name].forward,
-            &Relation::Reverse(ref name) => &variable_map[name].reverse,
+            &Relation::Forward(ref name) => &variable_map[name].forward(),
+            &Relation::Reverse(ref name) => &variable_map[name].reverse(),
         };
 
         transposed = transposed.join_core(to_join, |_k,&x,&y| Some((y,x)));
     }
 ```
 
-which uses the lower-level `join_core` method that allows you to supply pre-indexed arranged data, rather than un-indexed collections. Now we can re-use a variable multiple times without needing to maintain multiple copies in memory. For example, we could track all paths along five hops of edges:
+which uses the lower-level `join_core` method that allows you to supply pre-indexed arranged data, rather than un-indexed collections. This allows us to re-use a variable multiple times without needing to maintain multiple copies in memory. For example, we could track all paths along five hops of edges:
 
     nodes  ::==  nodes edges edges edges edges edges
 
@@ -449,6 +472,8 @@ without maintaining five indexed copies of `edges` in memory, as we would have o
 
 While this may not be very exciting for the query above, this optimization has some advantages for that complicated query we have way back up there:
 
+    VF+  ::==  A
+    VF+  ::==  A MA+
     VF+  ::==  A VF+
     VF+  ::==  A MA+ VF+
     MA+  ::==  ~D D+
@@ -467,13 +492,13 @@ Notice that there are only three recursively defined relations, and two ways eac
 
 Because this is what I spent this morning doing, ... let's try and run with multiple workers!
 
-    Echidnatron% cargo run --release --example graspan -- ~/Desktop/graspan/httpd_df.dms -w2
+    Echidnatron% cargo run --release --example graspan -- ./dataflow.query ~/Desktop/graspan/httpd_df.dms -w2
         Finished release [optimized + debuginfo] target(s) in 0.0 secs
          Running `target/release/examples/graspan /Users/mcsherry/Desktop/graspan/httpd_df.dms -w2`
     Rendering: Query {
         productions: [
-            Production { left_hand: "nodes", relations: [Forward("nodes"), Forward("edges")] },
-            Production { left_hand: "edges", relations: [] },
+            Production { left_hand: "n", relations: [Forward("n"), Forward("e")] },
+            Production { left_hand: "e", relations: [] },
         ]
     }
     Duration { secs: 0, nanos: 4417304 }:   Dataflow assembled
@@ -500,7 +525,7 @@ It turns out it is a bug in user code. Let me show you:
 ```rust
     for (name, (input, collection)) in input_map.drain() {
         let edge_variable = EdgeVariable::from(&collection.enter(subscope));
-        let trace = edge_variable.variable.as_ref().unwrap().leave().arrange_by_self().trace;
+        let trace = edge_variable.variable.leave().arrange_by_self().trace;
         result_map.insert(name.clone(), RelationHandles { input, trace });
         variable_map.insert(name.clone(), edge_variable);
     }
@@ -533,8 +558,8 @@ Ok, that should work great. Let's check it out.
          Running `target/release/examples/graspan /Users/mcsherry/Desktop/graspan/httpd_df.dms -w2`
     Rendering: Query {
         productions: [
-            Production { left_hand: "nodes", relations: [Forward("nodes"), Forward("edges")] },
-            Production { left_hand: "edges", relations: [] },
+            Production { left_hand: "n", relations: [Forward("n"), Forward("e")] },
+            Production { left_hand: "e", relations: [] },
         ]
     }
     Duration { secs: 0, nanos: 2253966 }:   Dataflow assembled
@@ -550,32 +575,24 @@ By the way, really excited to have fixed that bug. These new numbers are going t
 
 OH FOR !#$@s SAKE.
 
-It turns out there is another, very similar, bug. Let's zoom in on it:
+It turns out there is another, very similar, bug. This time it is in the calls to `complete` each variable:
 
 ```rust
+        for (_name, variable) in variable_map.drain() {
+            variable.complete();
+        }
         result_map
     })
 ```
 
-That's the last line or two of the `scoped` call. Looks .. simple enough? What happens there?
-
-Remember up at the top of the scope, we had a
+We need to do the same thing again, which is a bit annoying. Instead, here is a Rust crate for an [ordered hash map](https://crates.io/crates/indexmap) which maintains the insertion order, provides iteration in that order, and (presumably?) drops in the insertion order. I decided to switch to that, possibly permanently.
 
 ```rust
-    let mut variable_map = HashMap::new();
-```
-
-and that this map holds on to our `EdgeVariable` things, and that these clever structs have some code in their `drop` methods that connect bits of dataflow, and because it is a `HashMap` they `drop` methods GET CALLED IN A NON-DETERMINISTIC ORDER. Geez.
-
-Let's fix that last line or two of code with some unmitigated brilliance:
-
-```rust
-        let mut var_map = variable_map.drain().collect::<Vec<_>>();
-        var_map.sort_by(|x,y| x.0.cmp(&y.0));
-
+        for (_name, variable) in variable_map.drain(..) {
+            variable.complete();
+        }
         result_map
     })
 ```
-Here we drain the map, sort the results, and then drop the result when we exit the scope, thereby ensuring that the `EdgeVariable` things are dropped in a consistent order. Maybe `EdgeVariable` wasn't such a smart idea after all, or maybe we just need to avoid using `HashMap`s so casually. There is a Rust crate for an [ordered hash map](https://crates.io/crates/ordermap) which maintains the insertion order, provides iteration in that order, and (presumably?) drops in the insertion order.
 
 Don't make this same mistake! `#BeBest`!
