--- a/posts/2018-05-06.md
+++ b/posts/2018-05-06.md
@@ -11,7 +11,7 @@ This post will be partly walking through some of the moving parts in differentia
 Here is the outline:
 
 1. Define a little language (borrowed from [Graspan](https://www.ics.uci.edu/~guoqingx/papers/wang-asplos17.pdf)).
-2. Defining some Rust types to help us out.
+2. Defining some Rust types to help us define queries.
 3. Building iterative differential dataflows.
 4. Optimizing differential dataflows.
 
@@ -79,11 +79,11 @@ That is a bit wordier, but tough beans. It describes the actual joins we will ne
 
 Also, it's all going to be automated from here out anyhow.
 
-### Some helpful Rust types
+### Some helpful Rust types to define queries
 
 Let's create a few Rust types that should help us in our quest.
 
-First, we'll just use `String` to identify relations. This is going to be super easy.
+First, we will just use `String` to identify relations. This is going to be super easy.
 
 Next, let's create a simple enum to identify relations as transposed or not.
 
@@ -133,7 +133,7 @@ Our rough dataflow structure will be:
 
 1. For each named relation define a differential dataflow input, into which we can add (and from which we can remove) edges.
 2. We'll create a new iterative scope in which we can create recursively defined collections.
-3. For each named relation create a differential dataflow [`Variable`](https://github.com/frankmcsherry/differential-dataflow/blob/master/src/operators/iterate.rs#L131-L136), which allows us to define a collection in terms of itself and other `Variable`s. We set each variable to be initially the collection defined by the associated input.
+3. For each named relation create a differential dataflow [`Variable`](https://github.com/frankmcsherry/differential-dataflow/blob/master/src/operators/iterate.rs#L131-L136), which allows us to define a collection in terms of computations involving itself and other `Variable`s. We set each variable to be initially the collection defined by the associated input.
 4. For each production, repeatedly use `join` to produce edges that should be added to the target relation.
 5. For each named relation set its definition to be the distinct edges from its initial inputs and productions.
 
@@ -147,7 +147,7 @@ Let's try and frame the logic we want to build. We'll add a method to the `Query
 impl Query {
 
     /// Creates a dataflow implementing the query, and returns input handles.
-    pub fn build_in<'a, A>(&self, scope: &mut Child<'a, Root<A>, T>) -> HashMap<String, RelationHandles<T>>
+    pub fn build_in<'a, A, T>(&self, scope: &mut Child<'a, Root<A>, T>) -> HashMap<String, RelationHandles<T>>
     where A : Allocate,
           T : Timestamp+Lattice {
         // ...
@@ -249,7 +249,7 @@ It all starts pretty harmlessly, by creating an nested subscope and preparing so
         }
 ```
 
-Already we can see that the plan is to hold on maps to our `RelationHandle` types and to our `EdgeVariable` types. The former map is what we are going to return from the method, so that makes sense. The latter map is to scope-local `EdgeVariable` types and is not something we can return (it contains references to the nested scope's lifetime; many goats were sacrificed to Rust to permit this).
+Already we can see that the plan is to hold on to maps to our `RelationHandle` types and to our `EdgeVariable` types. The former map is what we are going to return from the method, so that makes sense. The latter map is to scope-local `EdgeVariable` types and is not something we can return (it contains references to the nested scope's lifetime; many goats were sacrificed to Rust to permit this).
 
 There are two further steps, populating these two maps, and then adding productions based on the query contents.
 
@@ -271,7 +271,7 @@ Right? :D
 
 :D
 
-The next step is to use `variable_map` and `self`, which is a `Query` recall, to add productions for each of those variables based on all the relations in each production. We do this production-by-production, doing a bunch of joins and then calling `add_production`. The only non-obvious thing is that as we form a partial path `x, z0, .., zi` we want to maintain `(x,zi)` with fields reversed as `(zi,x)` with the destination as the key, because the destination is what we'll use in the join to link up with the next edge `(zi,zj)`. At the end, we'll need to remember to flip the edge around and add `(x,y)` rather than `(y,x)`.
+The next step is to use `variable_map` and `self`, which is a `Query` recall, to add productions for each of those variables based on all the relations in each production. We do this production-by-production, doing a bunch of joins and then calling `add_production`. The only non-obvious thing is that as we form a partial path `x, z0, .., zi` we want to maintain `(x,zi)` with fields reversed as `(zi,x)` with the path destination as the key, because the destination is what we'll use in the join to link up with the next edge `(zi,zj)`. At the end, we'll need to remember to flip the edge around and add `(x,y)` rather than `(y,x)`.
 
 ```rust
             // For each rule, add to the productions for the relation.
@@ -281,24 +281,23 @@ The next step is to use `variable_map` and `self`, which is a `Query` recall, to
                 if production.relations.len() > 0 {
 
                     // We'll track the path transposed, so that it is indexed by *destination* rather than source.
-                    let mut transposed = match production.relations[0] {
-                        Relation::Forward(ref name) => variable_map[name].variable.map(|(x,y)|(y,x)),
-                        Relation::Reverse(ref name) => variable_map[name].variable.clone(),
+                    let mut transposed = match &production.relations[0] {
+                        Relation::Forward(name) => variable_map[name].variable.map(|(x,y)|(y,x)),
+                        Relation::Reverse(name) => variable_map[name].variable.clone(),
                     };
 
                     // Repeatedly join with sequence of relations, transpose.
                     for relation in production.relations[1..].iter() {
                         let to_join = match relation {
-                            &Relation::Forward(ref name) => variable_map[name].variable.clone(),
-                            &Relation::Reverse(ref name) => variable_map[name].variable.map(|(x,y)|(y,x)),
+                            Relation::Forward(name) => variable_map[name].variable.clone(),
+                            Relation::Reverse(name) => variable_map[name].variable.map(|(x,y)|(y,x)),
                         };
 
                         transposed = transposed.join_map(&to_join, |_k,&x,&y| (y,x));
                     }
 
                     // Reverse the direction before adding it as a production.
-                    variable_map
-                        .get_mut(&production.left_hand).unwrap()
+                    variable_map[&production.left_hand]
                         .add_production(&transposed.map(|(dst,src)| (src,dst)));
                 }
             }
@@ -308,7 +307,7 @@ That's it! Like, that's the whole `build_in` method. Next let's try using it!
 
 ### Running it!
 
-Here is a program that reads a Graspan query, then loads some Graspan data, then runs everything.
+Here is a program that reads a Graspan query, then loads some Graspan data, then runs everything. I appear to have left out some of the query parsing code, but you can read all about it in [the repository](https://github.com/frankmcsherry/differential-dataflow/blob/master/examples/graspan.rs).
 
 ```rust
 fn main() {
@@ -368,7 +367,14 @@ fn main() {
 }
 ```
 
-We can run this with one of the input datasets graciously provided by the Graspan team (thank you, Graspan team!), the nodes (`n`) and edges (`e`) relations for `httpd`.
+We can run this with one of the input datasets graciously provided by the Graspan team (thank you, Graspan team!), the nodes (`n`) and edges (`e`) relations for `httpd`. We are going to start with the `dataflow` query, which looks like
+
+    Echidnatron% cat dataflow.query
+    n n e
+    e
+    Echidnatron%
+
+This means that from starting nodes `n` facts, we follow unboundedly many edges produces new nodes facts. There are also some edge `e` facts, but there are no rules producing new facts.
 
     Echidnatron% cargo run --release --example graspan -- ./dataflow.query ~/Desktop/graspan/httpd_df.dms
         Finished release [optimized + debuginfo] target(s) in 82.16 secs
@@ -381,8 +387,8 @@ We can run this with one of the input datasets graciously provided by the Graspa
     }
     Duration { secs: 0, nanos: 1886966 }:   Dataflow assembled
     Duration { secs: 1, nanos: 854102052 }: Data loaded
-    Duration { secs: 11, nanos: 271388060 } edges: 9905624
-    Duration { secs: 28, nanos: 778159674 } nodes: 9393283
+    Duration { secs: 11, nanos: 271388060 } final size of relation 'e': 9905624
+    Duration { secs: 28, nanos: 778159674 } final size of relation 'n': 9393283
     Echidnatron%
 
 We can see a few things here.
@@ -401,7 +407,7 @@ We can see a few things here.
 
 ### Optimizing differential dataflows
 
-We have a few structural inefficiencies in our implementation up above, and let's take a moment to iron them out. They aren't going to help in the simple example we've been using so far, but they do help in other computations.
+We have a few structural inefficiencies in our implementation up above, and let's take a moment to iron some of them out. They aren't going to help in the simple example we've been using so far, but they do help in other computations.
 
 Recall that we form our productions like so
 
@@ -456,8 +462,8 @@ Now when we want to use a relation, we can instead write
 ```rust
     for relation in rule[1..].iter() {
         let to_join = match relation {
-            &Relation::Forward(ref name) => &variable_map[name].forward(),
-            &Relation::Reverse(ref name) => &variable_map[name].reverse(),
+            Relation::Forward(name) => variable_map[name].forward(),
+            Relation::Reverse(name) => variable_map[name].reverse(),
         };
 
         transposed = transposed.join_core(to_join, |_k,&x,&y| Some((y,x)));
